--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chirag Dhanesha | Digital Marketing Leader</title>
-    <link rel="stylesheet" href="./chirag-dhanesha-resume_files/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
             --primary: #00f0ff;
