--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
         <div class="container">
             <div class="header-grid">
                 <div>
-                    <img src="./chirag-dhanesha-resume_files/saved_resource" alt="Chirag Dhanesha" class="profile-hologram">
+                    <div class="profile-hologram">CD</div>
                 </div>
                 <div class="header-text">
                     <h1>CHIRAG DHANESHA</h1>
