--- a/index.html
+++ b/index.html
@@ -790,10 +790,10 @@
                         <div class="timeline-title">Head of Digital Marketing & Sales</div>
                         <div class="timeline-company">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Sept 25 - Present | Feedspace AI</span>
+                            <span>Sept 25 - Present | Techup Labs, Surat [Work From Home]</span>
                         </div>
                         <div class="timeline-description">
-                            <span class="timeline-highlight">Worked on Feedspace AI, leading GTM & performance marketing to 3x growth.</span>
+                            <span class="timeline-highlight">Worked on Feedspace AI Product, leading GTM & performance marketing to 3x growth.</span>
                             <span class="timeline-highlight">Launched Feedspace on AppSumo platform, trended in AI category globally.</span>
                             <span class="timeline-highlight">Managed SEO, content & product teams to scale AI and data analytics.</span>
                         </div>
