Update job titles and durations in experience section

--- a/index.html
+++ b/index.html
@@ -787,15 +787,15 @@
             <div class="experience-timeline">
                 <div class="cyber-card cyber-border">
                     <div class="timeline-item">
-                        <div class="timeline-title">Head of Digital Marketing & Sales</div>
+                        <div class="timeline-title">Digital Marketing Manager</div>
                         <div class="timeline-company">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Sept 25 - Present | Techup Labs, Surat [Work From Home]</span>
+                            <span>Dec 2025 - Present | Netclues India</span>
                         </div>
                         <div class="timeline-description">
-                            <span class="timeline-highlight">Worked on Feedspace AI Product, leading GTM & performance marketing to 3x growth.</span>
-                            <span class="timeline-highlight">Launched Feedspace on AppSumo platform, trended in AI category globally.</span>
-                            <span class="timeline-highlight">Managed SEO, content & product teams to scale AI and data analytics.</span>
+                            <span class="timeline-highlight">Directed SEO & digital marketing projects for 6+ international client accounts.</span>
+                            <span class="timeline-highlight">Managed full content marketing & performance marketing strategy execution.</span>
+                            <span class="timeline-highlight">Mentored and  led team of 12 specialists for ongoing projects.</span>
                         </div>
                     </div>
                 </div>
@@ -805,7 +805,7 @@
                         <div class="timeline-title">Digital Product Manager</div>
                         <div class="timeline-company">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>May 2023 - Aug 25 | Drlogy, Rajkot [Promoted]</span>
+                            <span>May 2023 - Sept 2025 | Drlogy, Rajkot [Promoted]</span>
                         </div>
                         <div class="timeline-description">
                             <span class="timeline-highlight">Launched 50+ healthcare product pages, boosting leads and traffic.</span>
