--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                 <div class="header-text">
                     <h1>CHIRAG DHANESHA</h1>
                     <div class="tagline cyber-border">AI Meets SEO, Digital Marketing &amp; Product Management</div>
-                    <p>Digital Product Manager | SEO &amp; Content Strategist | Digital Marketing Expert</p>
+                    <p>Digital Product Manager | SEO &amp; Content Strategist | Digital Marketing Manager</p>
                     <div class="contact-info">
                         <a href="tel:+919426138950" class="contact-item">
                             <i class="fas fa-phone"></i>
